# OtusHW

./: .gitignore  .travis.yml  CMakeLists.txt  make_solution.bat
src/: main.cpp  main_test.cpp  print_funcs.cpp  print_funcs.h
tmpl/: version.h.in
